Fixed tags layout on mobile

--- a/cast-fe/src/index.css
+++ b/cast-fe/src/index.css
@@ -11,6 +11,9 @@ body {
     .responsive-fold {
         margin-bottom: 16px;
     }
+    body {
+        margin: 0 12px;
+    }
 }
 
 .material-icons {
